test/trivial/mjoyner/iterators/nest_func_iterator2b.good
nest_func_iterator2b.chpl:1: error: formal argument of iterator cannot have intent
